--- a/src/app/listing/listing.component.html
+++ b/src/app/listing/listing.component.html
@@ -1,23 +1,23 @@
 <div class="row list">
-  <div class="col-md-4 col-sm-6 col-12" *ngFor="let item of data">
+  <div class="col-md-4 col-sm-6 col-12 col-xl-3" *ngFor="let item of data">
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"><span class="material-icons">
           account_circle
           </span></div>
-        <mat-card-title>{{item.name}}</mat-card-title>
-        <mat-card-subtitle>{{item.position}}</mat-card-subtitle>
+        <mat-card-title class="title">{{item.name}}</mat-card-title>
+        <mat-card-subtitle class="a">{{item.position}}</mat-card-subtitle>
         <span class="material-icons close" (click)="deletedata(item)">
           highlight_off
           </span>
       </mat-card-header>
       <mat-card-content>
-        <p>
+        <p class="a">
           {{item.about}}
         </p>
         <div class="join">
-          <span class="tags">Joining Date </span>
-          <span class="values"> {{ item.doj | date:"MM/dd/yy" }}</span>
+          <span class="tags a">Joining Date </span>
+          <span class="values a"> {{ item.doj | date:"MM/dd/yy" }}</span>
         </div>
       </mat-card-content>
     </mat-card>
