--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -1,5 +1,9 @@
 .list{
 
+  .example-card{
+    margin-bottom: 1rem;
+  }
+
   .example-header-image{
 
     .material-icons{
@@ -59,6 +63,9 @@
   .a{
     font-size: 12px !important;
   }
+  .example-card{
+    margin-bottom: 1rem;
+  }
 
 }
 
@@ -70,6 +77,10 @@
 
   .a{
     font-size: 13px !important;
+  }
+
+  .example-card{
+    margin-bottom: 1rem;
   }
 
 }
