--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,28 @@
     padding: 1rem 0;
   }
 }
+
+@media (max-width: 224px) {
+
+  h1{
+    font-size: 17px;
+  }
+  h2{
+    font-size: 14px;
+  }
+  button{
+    font-size: 10px;
+  }
+  .title{
+    font-size: 16px !important;
+  }
+
+
+  .a{
+    font-size: 12px !important;
+  }
+  .example-card{
+    margin-bottom: 1rem;
+  }
+
+}
