--- a/src/app/listing/listing.component.scss
+++ b/src/app/listing/listing.component.scss
@@ -84,3 +84,42 @@
   }
 
 }
+
+@media (max-width: 224px) {
+
+  .mat-card-subtitle, .mat-card-content {
+    font-size: 11px !important;
+    color: #676767;
+  }
+  .title{
+    font-size: 13px !important;
+  }
+
+  .example-header-image{
+
+    .material-icons{
+      font-size: 32px !important;
+    }
+
+  }
+  .close{
+    position: absolute;
+    top: 1.2rem;
+    right: 1.2rem;
+    font-size: 18px;
+  }
+
+  .mat-card-avatar {
+    height: 30px !important;
+    width: 25px !important;
+  }
+
+
+  .a{
+    font-size: 12px !important;
+  }
+  .example-card{
+    margin-bottom: 1rem;
+  }
+
+}
