responsiveness for listing page

--- a/src/app/listing/listing.component.html
+++ b/src/app/listing/listing.component.html
@@ -1,5 +1,5 @@
 <div class="row list">
-  <div class="col-md-4 col-sm-6 col-12 col-xl-3" *ngFor="let item of data">
+  <div class="col-md-6 col-sm-6 col-12 col-lg-4 col-xl-3" *ngFor="let item of data">
     <mat-card class="example-card">
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"><span class="material-icons">
